# omopex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sample.env
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh  postStart.sh
.github/workflows/: sqlmesh.yml
omopex/: settings.py
omopex/config/: omop_config.py  sqlmesh_config.py
omopex/macros/: __init__.py  common.py
omopex/projects/p_abx/: config.py
omopex/projects/p_abx/audits/: assert_positive_order_ids.sql
omopex/projects/p_abx/macros/: __init__.py  cohort.py  macro_observation_period.py  macro_remove_pts.sql
omopex/projects/p_abx/models/metrics/: vocab_size.sql
omopex/projects/p_abx/models/omop/: cdm_source.old  cdm_source.pyold  cdm_source.sql  condition_occurrence.sql  death.sql  drug_exposure.sql  fact_relationship.sql  location.sql  measurement.sql  observation.sql  person.sql  procedure_occurrence.sql  provider.sql  specimen.sql  visit_detail.sql  visit_occurrence.sql
omopex/projects/p_abx/models/staging/: cs_drug.sql  stg__cohort.sql  stg_vocab_shard.py
omopex/projects/p_abx/models/vocab/: concept.sql  concept_ancestor.sql  concept_class.sql  concept_relationship.sql  concept_synonym.sql  domain.sql  relationship.sql  source_to_concept_map.sql  vocabulary.sql
omopex/projects/p_abx/seeds/: cs_drug.csv
omopex/projects/p_test/: config.py
omopex/projects/p_test/models/: test_model.sql
